kubernet-service/Ingress/WithNodePort/pod-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-web
  namespace: ingress-controller
  labels:
    app: web
spec:
  containers:
    - name: nginx
      image: nginx
