kubernet-service/Ingress/WithNodePort/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: ingress-controller
spec:
  rules:
    - host: vtanh1905.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-web
                port:
                  number: 30007
